// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Skeleton ENCOURA theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-15om3bo-MuiSkeleton-root"
    style="width: 100px; height: 100px;"
  />
</div>
`;

exports[`Skeleton ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-121fxnd-MuiSkeleton-root"
    style="width: 100px; height: 100px;"
  />
</div>
`;

exports[`Skeleton ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-dqx9h-MuiSkeleton-root"
    style="width: 100px; height: 100px;"
  />
</div>
`;

exports[`Skeleton ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-11xkbm-MuiSkeleton-root"
    style="width: 100px; height: 100px;"
  />
</div>
`;
